--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 
 # Run Talawa-api locally in your system, and put its url into the same.
 
-REACT_APP_TALAWA_URL=http://localhost:4000/graphql
+REACT_APP_TALAWA_URL=
 
 # Do you want to setup and use "I'm not a robot" Checkbox (Google Recaptcha)?
 # If no, leave blank, else write yes
@@ -21,7 +21,3 @@ REACT_APP_RECAPTCHA_SITE_KEY=
 
 # has to be inserted in the env file to use plugins and other websocket based features.
 REACT_APP_BACKEND_WEBSOCKET_URL=ws://localhost:4000/graphql
-
-# If you want to logs Compiletime and Runtime error , warning and info write YES or if u want to  
-# keep the console clean leave it blank
-ALLOW_LOGS=
