--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # file to .env or set the variables in your local environment manually.
 
 
+# Custom port number for the talawa-admin development server to run on. Default is 4321.
+
+PORT=
+
 # Run Talawa-api locally in your system, and put its url into the same.
 
 REACT_APP_TALAWA_URL=
