fix: Added default port to 4321
Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 
 # Custom port number for the talawa-admin development server to run on. Default is 4321.
 
-PORT=
+PORT=4321
 
 # Run Talawa-api locally in your system, and put its url into the same.
 
