--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,5 @@
 {
   "**/*.{ts,tsx,yml}": "eslint --fix",
-  "**/*.{ts,tsx,json,scss,css,yml}": "prettier --write"
+  "**/*.{ts,tsx,json,scss,css,yml}": "prettier --write",
+  "**/*.{ts,tsx}": "node scripts/githooks/check-localstorage-usage.js"
 }
