--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,9 +35,8 @@
     "eslint-plugin-tsdoc"
   ],
   "rules": {
-    "react/destructuring-assignment": ["off"],
-    // "@typescript-eslint/no-explicit-any": ["off"],
-    "@typescript-eslint/explicit-module-boundary-types": ["off"],
+    "react/destructuring-assignment": ["error"],
+    "@typescript-eslint/explicit-module-boundary-types": ["error"],
     "react/no-multi-comp": [
       "error",
       {
@@ -53,7 +52,7 @@
     "import/no-duplicates": "error",
     "tsdoc/syntax": "error",
     "@typescript-eslint/ban-ts-comment": "error",
-    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-inferrable-types": "error",
     "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
     "@typescript-eslint/no-non-null-assertion": "error",
@@ -118,16 +117,16 @@
     ],
 
     // Enforces whitespace around equal sign operators
-    "react/jsx-equals-spacing": ["warn", "never"],
+    "react/jsx-equals-spacing": ["error", "never"],
     "react/no-this-in-sfc": "error",
 
     // All tests must need not have an assertion
     "jest/expect-expect": 0,
 
     // Ensures that components are always indented by 2 spaces
-    "react/jsx-indent": ["warn", 2],
+    "react/jsx-indent": ["error", 2],
     "react/jsx-tag-spacing": [
-      "warn",
+      "error",
       {
         "afterOpening": "never",
         "beforeClosing": "never",
