--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -102,8 +102,8 @@ jobs:
           npm install --save-dev @types/node
           npx typedoc --entryPoints src/components src/screens --out talawa-admin-docs --plugin typedoc-plugin-markdown --theme markdown --entryPointStrategy expand --exclude "**/*.test.ts" --exclude "**/*.css"
           
-      - name: Make Markdown Files MPX Compatible
-        run: python ./.github/workflows/md_mpx_format_adjuster.py --directory talawa-admin-docs
+      - name: Make Markdown Files MDX Compatible
+        run: python ./.github/workflows/md_mdx_format_adjuster.py --directory talawa-admin-docs
         
           
       - name: Checking doc updated
@@ -158,5 +158,3 @@ jobs:
         user_email: '${{env.email}}'
         user_name: '${{github.actor}}'
         commit_message: 'Talawa Admin docs updated'
-      
-       
