--- a/.github/workflows/authorized-changes-detection.yml
+++ b/.github/workflows/authorized-changes-detection.yml
@@ -36,4 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Unauthorized file modification in PR
-        run: exit 1
+        run: |
+          chmod +x ./.github/workflows/authorized-change.py
+          ./.github/workflows/authorized-change.py
+    
