--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -13,6 +13,24 @@ name: PR Workflow
 
 on:
   pull_request:
+    paths:
+      - '.github/**'
+      - 'env.example'
+      - '.husky/**'
+      - 'scripts/**'
+      - 'package.json'
+      - 'tsconfig.json'
+      - '.gitignore'
+      - '.eslintrc.json'
+      - '.eslintignore'
+      - 'vite.config.ts'
+      - 'docker-compose.yaml'
+      - 'Dockerfile'
+      - 'CODEOWNERS'
+      - 'LICENSE'
+      - 'setup.ts'
+      - '.github/workflows/sensitive_files.txt'
+      
     branches:
       - '**'
 
@@ -71,7 +89,7 @@ jobs:
 
       - name: Run Python script
         run: |
-         python .github/workflows/count_changed_files.py --base_branch "${{ github.base_ref }}" --pr_branch "${{ github.head_ref }}" --sensitive_files .prettierignore
+         python .github/workflows/count_changed_files.py --base_branch "${{ github.base_ref }}" --pr_branch "${{ github.head_ref }}" --sensitive_files .github/workflows/sensitive_files.txt
 
   Test-Application:
     name: Test Application
