upgraded @pdfme dependencies

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/x-charts": "^6.0.0-alpha.13",
     "@mui/x-data-grid": "^6.8.0",
     "@mui/x-date-pickers": "^6.6.0",
-    "@pdfme/generator": "^1.2.6",
+    "@pdfme/common": "^3.2.3",
+    "@pdfme/generator": "^3.2.3",
+    "@pdfme/schemas": "^3.2.3",
     "bootstrap": "^5.3.0",
     "customize-cra": "^1.0.0",
     "dayjs": "^1.10.7",
