--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,32 +19,74 @@ on:
 env:
     CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
   
-jobs:      
+jobs:
   Code-Coverage:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install --legacy-peer-deps
+
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: |
+            ~/.npm
+            node_modules
+          key: ${{ runner.os }}-code-coverage-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-code-coverage-${{ env.cache-name }}-
+            ${{ runner.os }}-code-coverage-
+            ${{ runner.os }}-
+      
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: List the state of node modules
+        run: npm install
       - run: npm run test -- --watchAll=false --coverage
       - name: Present and upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
           fail_ci_if_error: false
           name: '${{env.CODECOV_UNIQUE_NAME}}'
 
   Generate-Documentation:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/automated-docs'
+    # if: github.ref == 'refs/heads/automated-docs'
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v3
-        
-      - name: Install Dependencies
-        run: yarn install --legacy-peer-deps
+
+      - name: Node.js Version
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Restore node_modules from cache
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: |
+            ~/.npm
+            node_modules
+          key: ${{ runner.os }}-generate-docs-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-generate-docs-${{ env.cache-name }}-
+            ${{ runner.os }}-generate-docs-
+            ${{ runner.os }}-
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Install TypeScript Globally and add GraphQL tag
         run: yarn global add typescript
@@ -55,9 +97,14 @@ jobs:
 
       - name: Generate Documentation of Markdown pages
         run: |
-          yarn global add typedoc
-          yarn add typedoc-plugin-markdown
-          yarn typedoc --entryPoints src/components src/screens --out talawa-admin-docs --plugin typedoc-plugin-markdown --theme markdown --entryPointStrategy expand --exclude "**/*.test.ts" --exclude "**/*.css"
+          npm install --global typedoc
+          npm install typedoc-plugin-markdown
+          npm install --save-dev @types/node
+          npx typedoc --entryPoints src/components src/screens --out talawa-admin-docs --plugin typedoc-plugin-markdown --theme markdown --entryPointStrategy expand --exclude "**/*.test.ts" --exclude "**/*.css"
+          
+      - name: Make Markdown Files MDX Compatible
+        run: python ./.github/workflows/md_mdx_format_adjuster.py --directory talawa-admin-docs
+        
           
       - name: Checking doc updated
         id: DocUpdated
@@ -96,12 +143,13 @@ jobs:
           path: talawa-admin-docs
 
   Copy-docs-to-talawa-docs:
+    needs: Generate-Documentation
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
       env:
-        API_TOKEN_GITHUB: ${{ secrets.TALAWA_DOCS_SYNC_NEW }}    
+        API_TOKEN_GITHUB: ${{secrets.TALAWA_DOCS_SYNC}}    
       with:
         source_file: 'talawa-admin-docs/'
         destination_repo: 'PalisadoesFoundation/talawa-docs'
@@ -110,5 +158,3 @@ jobs:
         user_email: '${{env.email}}'
         user_name: '${{github.actor}}'
         commit_message: 'Talawa Admin docs updated'
-      
-       
