--- a/.github/workflows/authorized-changes-detection.yml
+++ b/.github/workflows/authorized-changes-detection.yml
@@ -16,14 +16,18 @@ on:
       - '.github/**'   
       - 'env.example'
       - '.husky/**'
+      - 'scripts/**'
       - 'package.json'
       - 'tsconfig.json'
       - '.gitignore'
       - '.eslintrc.json'
       - '.eslintignore '
       - 'vite.config.ts'
+      - 'docker-compose.yaml'
+      - 'Dockerfile'      
       - 'CODEOWNERS'
       - 'LICENSE'
+      - 'setup.ts'
       
 jobs:
   Checking-for-unauthorized-file-changes:
