--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,9 +13,8 @@ name: PR Workflow
 
 on:
   pull_request:
-      
     branches:
-      - '**'
+      - ''
 
 env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
@@ -63,21 +62,16 @@ jobs:
     needs: Code-Quality-Checks
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v2
-      - name: Run Python script
+        uses: actions/checkout@v1
+
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+
       - name: Run Python script
-        run: |
-         echo "The following files have changed: ${{ steps.changed-files.outputs.all_changed_files }}"
-         chmod +x .github/workflows/check_files.py
-         python .github/workflows/check_files.py --base_branch "${{ github.base_ref }}" --pr_branch "${{ github.head_ref }}" --sensitive_files .github/workflows/sensitive_files.txt
+        run: 
+          python .github/workflows/check_files.py --base_branch "${{ github.base_ref }}" --pr_branch "${{ github.head_ref }}" --sensitive_files .github/workflows/sensitive_files.txt
 
   Test-Application:
     name: Test Application
