--- a/.github/workflows/authorized-changes-detection.yml
+++ b/.github/workflows/authorized-changes-detection.yml
@@ -15,6 +15,7 @@ on:
     paths:
       - '.github/**'   
       - 'env.example'
+      - '.node-version'
       - '.husky/**'
       - 'scripts/**'
       - 'package.json'
