--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -64,6 +64,7 @@ jobs:
 
 
   Check-Changed-Files:
+    name: File count, sensitive files and branch check
     runs-on: ubuntu-latest
     needs: Code-Quality-Checks
     steps:
