--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -66,7 +66,7 @@ jobs:
   Check-Changed-Files:
     name: File count, sensitive files and branch check
     runs-on: ubuntu-latest
-    needs: Code-Quality-Checks
+    # needs: Code-Quality-Checks
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
