--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -82,7 +82,12 @@ jobs:
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v3
+        with:
+          ref: develop
 
+      - name: Pull latest changes from develop
+        run: git pull origin develop
+      
       - name: Node.js Version
         uses: actions/setup-node@v4
         with:
