--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -78,15 +78,15 @@ jobs:
 
   Generate-Documentation:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/automated-docs'
+    if: github.ref == 'refs/heads/develop'
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v3
-        with:
-          ref: develop
+        # with:
+        #   ref: develop
 
-      - name: Pull latest changes from develop
-        run: git pull origin develop
+      # - name: Pull latest changes from develop
+      #   run: git pull origin develop
       
       - name: Node.js Version
         uses: actions/setup-node@v4
@@ -156,7 +156,7 @@ jobs:
           git config --global user.email "${{env.email}}"
           git add .
           git commit -m "Update documentation"
-          git push
+          git push origin develop:automated-docs --force
           echo -e "🚀${Green} Hurrah! doc updated${NoColor}"
       
       - name: Create Documentation Artifact
@@ -166,7 +166,7 @@ jobs:
           path: talawa-admin-docs
 
   Copy-docs-to-talawa-docs:
-    needs: Generate-Documentation
+    if: github.ref == 'refs/heads/automated-docs'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
