--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -76,7 +76,7 @@ jobs:
           python-version: 3.9
 
       - name: Run Python script
-        run: 
+        run: |
           python3 .github/workflows/check_files.py --base_branch "${{ github.base_ref }}" --pr_branch "${{ github.head_ref }}" --sensitive_files .github/workflows/sensitive_files.txt
 
   Test-Application:
