--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Run Python script
         run: |
-          python .github/workflows/check_eslint_disable.py"
+          python .github/workflows/check_eslint_disable.py
 
   Test-Application:
     name: Test Application
