Refactored setup.ts and added tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "src/App.tsx"]
+  "include": ["src", "src/App.tsx", "setup.ts"]
 }
