--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -103,7 +103,7 @@ jobs:
   Test-Application:
     name: Test Application
     runs-on: ubuntu-latest
-    needs: [Code-Quality-Checks]
+    needs: [Code-Quality-Checks, Check-ESlint-Disable]
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v4
