--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "js-cookie": "^3.0.1",
     "lint-staged": "^15.2.0",
     "markdown-toc": "^1.2.0",
-    "node-sass": "^9.0.0",
     "prettier": "^3.2.5",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
@@ -120,6 +119,7 @@
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
     "postcss-modules": "^6.0.0",
+    "sass": "^1.71.1",
     "tsx": "^3.11.0"
   },
   "resolutions": {
