--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.14.0",
+    "history": "^5.3.0",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
@@ -45,7 +46,7 @@
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.3",
     "redux": "^4.1.1",
