--- a/package.json
+++ b/package.json
@@ -121,7 +121,6 @@
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
     "tsx": "^3.11.0",
-    "jquery": "^3.2.1",
     "lint-staged": "^15.2.2",
     "postcss-modules": "^6.0.0"
   },
@@ -136,5 +135,8 @@
       "prettier --write"
     ],
     "**/*.{ts, tsx, json}": "eslint --fix"
+  },
+  "engines": {
+    "node": ">=20.x"
   }
 }
