--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,6 @@ REACT_APP_BACKEND_WEBSOCKET_URL=ws://localhost:4000/graphql
 # If you want to logs Compiletime and Runtime error , warning and info write YES or if u want to  
 # keep the console clean leave it blank
 ALLOW_LOGS=
+
+# If you want to access Talawa Admin from a remote host
+REACT_APP_REMOTE_HOST=
