--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-toastify": "^9.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "sanitize-html": "^2.12.1",
     "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
@@ -106,6 +107,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-router-dom": "^5.1.8",
+    "@types/sanitize-html": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "cross-env": "^7.0.3",
