--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -180,6 +180,9 @@ jobs:
       - name: Check if source and target branches are different
         if: ${{ github.event.pull_request.base.ref == github.event.pull_request.head.ref }}
         run: |
+          echo "Checking if source and target branches are different..."
+          echo "Source branch: ${{ github.event.pull_request.head.ref }}"
+          echo "Target branch: ${{ github.event.pull_request.base.ref }}"
           echo "Error: Source and target branches are the same. Please ensure you're not merging the same branch."
           exit 1
   
