Added action check for different source and target branches

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -84,6 +84,23 @@ jobs:
         run: |
           python .github/workflows/count_changed_files.py --base_branch "${{ github.base_ref }}" --pr_branch "${{ github.head_ref }}"
 
+  Check-Source-Target-Branch:
+    name: Checks for same source and target branch 
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
+
+      - name: Run Python script
+        run: |
+          python .github/workflows/check_branch.py "${{ github.event.pull_request.head.ref }}" "${{ github.event.pull_request.base.ref }}"
+
   Check-ESlint-Disable:
     name: Check for eslint-disable
     runs-on: ubuntu-latest
