--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "redux-thunk": "^2.3.0",
     "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "serve": "node ./scripts/config-overrides/custom_start.js",
