Fixes #1514 redesign the Posts screen for the talawa user portal

--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,4 @@ REACT_APP_USE_RECAPTCHA=
 REACT_APP_RECAPTCHA_SITE_KEY=
 
 # has to be inserted in the env file to use plugins and other websocket based features.
-REACT_APP_BACKEND_WEBSOCKET_URL=ws://localhost:4000/graphql
+REACT_APP_BACKEND_WEBSOCKET_URL=localhost:4000/graphql
