--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-i18next": "^11.18.6",
+    "react-i18next": "^11.18.1S",
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.5",
