--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "i18next-http-backend": "^1.4.1",
     "inquirer": "^8.0.0",
     "js-cookie": "^3.0.1",
-    "lint-staged": "^15.2.0",
     "markdown-toc": "^1.2.0",
     "prettier": "^3.2.5",
     "react": "^17.0.2",
@@ -119,6 +118,7 @@
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
+    "lint-staged": "^15.2.2",
     "postcss-modules": "^6.0.0",
     "sass": "^1.71.1",
     "tsx": "^3.11.0"
@@ -131,5 +131,11 @@
   },
   "engines": {
     "node": ">=20.x"
+  },
+  "lint-staged": {
+    "**/*.{ts, tsx, json, scss, css}": [
+      "prettier --write"
+    ],
+    "**/*.{ts, tsx, json}": "eslint --fix"
   }
 }
