--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -27,8 +27,7 @@ body:
     id: reproduce
     attributes:
       label: Reproduction steps
-      description: How do you trigger this bug? Please walk us through it step by step.
-      placeholder: How did you get the bug?
+      description: "How do you trigger this bug? Please walk us through it step by step."
       value: |
       1.
       2.
