--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 ---
 name: 🛠️ Feature Request
-description: Suggest an idea to help us improve digitomize.
+description: Suggest an idea to help us improve Talawa.
 title: "[Feature]: "
 labels:
   - "feature request"
