--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -67,22 +67,66 @@ jobs:
           python .github/workflows/compare_translations.py --directory public/locales
 
 
-  Check-Changed-Files:
-    name: File count, sensitive files and branch check
+  Check-Unauthorized-Changes:
+    name: Checks if no unauthorized files are changed
     runs-on: ubuntu-latest
-    # needs: Code-Quality-Checks
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Get Changed Unauthorized files
+        id: changed-unauth-files
+        uses: tj-actions/changed-files@v40
+        with:
+          files: |
+            .github/**  
+            env.example
+            .node-version
+            .husky/**
+            scripts/**
+            package.json
+            tsconfig.json
+            .gitignore
+            .eslintrc.json
+            .eslintignore
+            vite.config.ts
+            docker-compose.yaml
+            Dockerfile
+            CODEOWNERS
+            LICENSE
+            setup.ts
+            
+      - name: List all changed unauthorized files
+        if: steps.changed-unauth-files.outputs.any-changed == 'true'
+        env: 
+          CHANGED_UNAUTH_FILES: ${{ steps.changed-unauth-files.outputs.all_changed_files }}
+        run: |
+          for file in ${CHANGED_UNAUTH_FILES}; do
+            echo "$file was changed."
+          done
+
+  Count-Changed-Files:
+    name: Checks if number of files changed is acceptable
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.9
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v40
 
-      - name: Run Python script
+      - name: Check if the number of changed files is less than 20
+        if: steps.changed-files.outputs.all_changed_files_count > 20
+        env: 
+          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
         run: |
-          python .github/workflows/count_changed_files.py --base_branch "${{ github.base_ref }}" --pr_branch "${{ github.head_ref }}"
+          echo "Number of files changed: $CHANGED_FILES_COUNT"
+          echo "Error: Too many files (greater than 20) changed in the pull request."
+          echo "Possible issues:"
+          echo "- Contributor may be merging into an incorrect branch."
+          echo "- Source branch may be incorrect please use develop as source branch."
+          exit 1
 
   Check-ESlint-Disable:
     name: Check for eslint-disable
